[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/Objects/Projectiles/rocket.png" type="Texture" id=1]
[ext_resource path="res://scenes/entities/ConcreteEntities/Bullets/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/entities/Projectiles/Rocket.gd" type="Script" id=3]
[ext_resource path="res://resources/Effects/EngineParticles.tres" type="Material" id=4]
[ext_resource path="res://resources/Sound/small_engine.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.42996
height = 30.5173

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 1080, 277, 1039, 538, 930, 767, 760, 930, 540, 1040, 282, 1080, 0, 1040, -282, 930, -540, 767, -760, 538, -930, 277, -1039, 0, -1080 )

[sub_resource type="CircleShape2D" id=3]
radius = 1080.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 540, 50 )

[node name="Rocket" instance=ExtResource( 2 )]
mass = 0.01
contacts_reported = 1
linear_velocity = Vector2( 0, 0 )
script = ExtResource( 3 )
EngineSpeed = 150.0

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )

[node name="EngineParticles" type="Particles2D" parent="Sprite" index="0"]
position = Vector2( -24.2067, 0 )
rotation = 3.14159
amount = 13
local_coords = false
process_material = ExtResource( 4 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 1.31283, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="SpawnAnchor" parent="." index="2"]
position = Vector2( -24.016, 0 )

[node name="Lifespan" parent="Timers" index="0"]
wait_time = 4.0

[node name="PriorityTargetDisableTimer" type="Timer" parent="Timers" index="1"]
process_mode = 0
wait_time = 0.1
one_shot = true
autostart = true

[node name="LockOnArea" type="Area2D" parent="." index="4"]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LockOnArea" index="0"]
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LockOnArea" index="1"]
visible = false
shape = SubResource( 3 )
disabled = true

[node name="ShootLockOnArea" type="Area2D" parent="." index="5"]
visible = false
linear_damp = -1.0
angular_damp = -1.0
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootLockOnArea" index="0"]
position = Vector2( 540, 0 )
shape = SubResource( 4 )

[node name="EngineSound" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource( 5 )
volume_db = -9.0
[connection signal="timeout" from="Timers/PriorityTargetDisableTimer" to="." method="_on_PriorityTargetDisableTimer_timeout"]
[connection signal="body_entered" from="LockOnArea" to="." method="_on_LockOnArea_body_entered"]
[connection signal="body_exited" from="LockOnArea" to="." method="_on_LockOnArea_body_exited"]
[connection signal="body_entered" from="ShootLockOnArea" to="." method="_on_ShootLockOnArea_body_entered"]
